2011-01-08  Ulrich Drepper  <drepper@gmail.com>

	* po/ja.po: Update from translation team.

2011-01-04  David S. Miller  <davem@sunset.davemloft.net>

	[BZ #11155]
	* sysdeps/unix/sysv/linux/sparc/sparc64/fxstat.c: Use i386's
	implementation just like for lxstat, fxstatat, et al.

2010-12-27  Jim Meyering  <meyering@redhat.com>

	[BZ #12348]
	* posix/regexec.c (build_trtable): Return failure indication upon
	calloc failure.  Otherwise, re_search_internal could infloop on OOM.

2010-12-25  Ulrich Drepper  <drepper@gmail.com>

	[BZ #12201]
	* sysdeps/unix/sysv/linux/getrlimit64.c: New file.
	* sysdeps/unix/sysv/linux/setrlimit64.c: New file.
	* sysdeps/unix/sysv/linux/i386/getrlimit64.c: Use ../getrlimit64.c.
	* sysdeps/unix/sysv/linux/kernel-features.h: Define __ASSUME_PRLIMIT64.

	[BZ #12207]
	* malloc/malloc.c (do_check_malloc_state): Use fastbin macro.

	[BZ #12204]
	* string/xpg-strerror.c (__xpg_strerror_r): Return error code, not -1.
	* sysdeps/mach/xpg-strerror.c (__xpg_strerror_r): Likewise.

2010-12-15  H.J. Lu  <hongjiu.lu@intel.com>

	* config.h.in (NO_CTORS_DTORS_SECTIONS): Define.
	* configure.in: Define NO_CTORS_DTORS_SECTIONS if linker
	script has SORT_BY_INIT_PRIORITY.
	* elf/sofini.c: Remove `.ctors' and `.dtors' sections if
	NO_CTORS_DTORS_SECTIONS is defined.
	* elf/soinit.c: Likewise.
	* sysdeps/i386/init-first.c: Don't call __libc_global_ctors if
	NO_CTORS_DTORS_SECTIONS is defined.
	* sysdeps/mach/hurd/i386/init-first.c: Likewise.
	* sysdeps/mach/hurd/powerpc/init-first.c: Likewise.
	* sysdeps/sh/init-first.c: Likewise.
	* sysdeps/unix/sysv/linux/init-first.c: Likewise.

2010-12-24  Ulrich Drepper  <drepper@gmail.com>

	* stdio-common/vfprintf.c (vfprintf): If printf handlers are installed
	always use the slow path.

2010-12-15  Ryan S. Arnold  <rsa@us.ibm.com>

	* elf/Makefile: (check-execstack): Replace $(native-compile) with a
	similar rule which adds the sysdep directories to the header search in